# md-exam-updates

./: README.md  pyproject.toml
web-scraper/: database_manager.py  jossa_scraper.py
