[project]
name = "md-exam-updates"
version = "0.1.0"
description = ""
authors = [
    {name = "Vivek Patidar",email = "77988917+ImJericho@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
